# ForMyDJs

./: .dockerignore  .gitignore  .gitleaks.toml  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml  security-scan.yml
Sources/ForMyDJ/: AudioConverter.swift
app/: cli.py  desktop.py  server.py
app/static/: app.js  index.html  styles.css
docs/: LOCAL_README.md
docs/superpowers/plans/: 2026-04-30-formydj-source-aware-conversion.md  2026-04-30-formydj-ui-redesign.md
docs/superpowers/specs/: 2026-04-30-formydj-source-aware-conversion-design.md  2026-04-30-formydj-ui-redesign-design.md
scripts/: build-macos-app.sh
skills/: README.md
skills/claude/: SKILL.md
skills/codex/: AGENTS.md
skills/gemini/: skill.toml
tests/: test_bpm_estimation.py  test_cli_pickers.py  test_codec_classification.py  test_cover_embedding.py  test_output_dir_required.py  test_passthrough_routing.py  test_probe_response.py  test_version_check.py  test_ytdlp_invocation.py
